--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
 </head>
 <body>
     <p>가나다라마바</p>
-    <input type="text" style="width: 500px; height: 100px;" font-size= 90px;>
+    <input type="text" style="width: 500px; height: 100px; font-size: 90px;">
     <button style="width: 250px; height: 100px;">버튼</button>
+    <h3>
+        rkskkekfkk
+    </h3>
 </body>
 </html>
- 
+
