--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
    <title>MYhtml</title>
 </head>
 <body>
-    <p>가나다라마바</p>
-    <input type="text" style="width: 500px; height: 100px; font-size: 90px;">
-    <button style="width: 250px; height: 100px;">버튼</button>
-    <h3>
-        김유신 디졌다
-    </h3>
-    <h4> 두영아 너도 뒤졌다 </h4>
+ <h1>존나 어렵네</h1>
+ <nav> Beomsoo is king of all of the world</nav>
+ <h3>이거 업데이트 엌[하노 
+ </h3>
 </body>
 </html>
 
